--- a/css/style.css
+++ b/css/style.css
@@ -4,16 +4,25 @@
     padding: 0;
     box-sizing: border-box;
 }
+
 body {
-    background-color: brown;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-header {
+header {    
+    width: 200px;
     background-color: hotpink;
 }
+main {
+    width: calc(100% - 200px);
+    height: calc(100vh - 100px);    
+    background-color: rgb(20, 25, 34);
+}
 
+.container {
+    display: flex;
+}
 .top-bar {
-    width: 200px;
     height: calc(100vh - 100px);
 }
 .top-bar__menu{
@@ -44,4 +53,63 @@ header {
    background-color: rgb(128, 128, 128);
    border-radius: 50%;
    vertical-align: middle;
+}
+
+
+
+.main-banner {
+    width: 100%;
+    height: 100px;
+    line-height: 100px;
+    text-align: right;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+.main-banner__button {
+    /* colore del bottone e creazione bordo */
+    background-color: transparent;
+    border: 2px solid white;
+    border-radius: 50px;
+    font-size: 1.2em;
+    color: white; 
+    /* altezza e padding per creare l'effetto arrotondamento    */
+    height: 40px;
+    padding: 0 20px;
+
+    margin-right: 20px;
+    text-transform: uppercase;
+}
+
+.main-content {
+    width: 100%;
+    height: calc(100% - 100px);
+}
+
+.navigation {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.navigation__item {
+    position: relative;
+    height: 30px;
+    margin: 20px;
+}
+.navigation__item a {
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 1.2em;
+    color: rgb(125, 127, 132);
+}
+
+/* After per l'aggiunta dell'underline sotto al link */
+.navigation__item span {
+    content: "";    
+    position: absolute; 
+    display: block;
+    width: 30%;
+    height: 3px;       
+    top: 100%;
+    left: 50%;
+    transform: translate(-50%, 0);
+    background-color: rgb(173, 255, 47);;
 }
