--- a/css/style.css
+++ b/css/style.css
@@ -82,9 +82,11 @@ main {
 .main-content {
     width: 100%;
     height: calc(100% - 100px);
+    color: white;
 }
 
 .navigation {
+    width: 100%;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -98,9 +100,9 @@ main {
     text-decoration: none;
     text-transform: uppercase;
     font-size: 1.2em;
+    font-weight: 600;
     color: rgb(125, 127, 132);
 }
-
 /* After per l'aggiunta dell'underline sotto al link */
 .navigation__item span {
     content: "";    
@@ -112,4 +114,46 @@ main {
     left: 50%;
     transform: translate(-50%, 0);
     background-color: rgb(173, 255, 47);;
+}
+
+
+.wrap-playlist {
+    display: flex;
+    margin-top: 30px;
+}
+.playlist {
+    text-align: center;
+}
+.playlist__thumbnail {
+    width: 300px;
+    height: 300px;
+    position: relative;
+    cursor: pointer;
+}
+/* .playlist__thumbnail_bg-dark {
+    background-color: rgba(0, 0, 0, 0.8);
+} */
+.playlist__thumbnail img {
+    max-width: 100%;
+}
+.playlist__text-content h3 {
+    color: rgb(125, 127, 132);
+}
+.playlist__text-content h2,
+.playlist__text-content h3 {
+    margin-top: 10px;
+}
+.playlist__thumbnail i {
+    display: none;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 5em;
+}
+.playlist__thumbnail:hover img{
+    opacity: 60%;
+}
+.playlist__thumbnail:hover i{
+    display: block;
 }
