--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,9 @@ main {
 }
 
 
-
+.main-content {
+    margin: 0 30px;
+}
 .main-banner {
     width: 100%;
     height: 100px;
@@ -119,20 +121,17 @@ main {
 
 .wrap-playlist {
     display: flex;
+    flex-wrap: wrap;
     margin-top: 30px;
 }
 .playlist {
     text-align: center;
+    margin-right: 20px;
 }
 .playlist__thumbnail {
-    width: 300px;
-    height: 300px;
     position: relative;
     cursor: pointer;
 }
-/* .playlist__thumbnail_bg-dark {
-    background-color: rgba(0, 0, 0, 0.8);
-} */
 .playlist__thumbnail img {
     max-width: 100%;
 }
