--- a/css/style.css
+++ b/css/style.css
@@ -9,10 +9,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-header {    
-    width: 200px;
-    background-color: hotpink;
-}
+
 main {
     width: calc(100% - 200px);
     height: calc(100vh - 100px);    
@@ -22,38 +19,41 @@ main {
 .container {
     display: flex;
 }
-.top-bar {
+
+.sidebar {
     height: calc(100vh - 100px);
-}
-.top-bar__menu{
+    width: 200px;
+    background-color: black;
+
+    /* COLORE del testo da rimuovere */
+    color: white;
+
+    padding: 10px 15px;
     display: flex;
-    flex-wrap: wrap;
-    height: 100%;
-    align-content: flex-start;
+    flex-direction: column;
 }
-.top-bar__menu > * {
+.sidebar-top {
+    flex-grow: 1;
+}
+.sidebar-top__logo img {
     width: 100%;
 }
-
-.top-bar__logo img {
-    width: 200px;
-}
-
-.menu-newlist i {
+.sidebar-top__newlist i {
     font-size: 2em;
     padding: 10px;
     background-color: rgb(163, 163, 163);
     vertical-align: middle;
 }
-
-
-.menu-profile__account img {
+.sidebar-bot__account img {
    width: 40px;
    height: 40px;
    background-color: rgb(128, 128, 128);
    border-radius: 50%;
    vertical-align: middle;
 }
+
+
+
 
 
 .main-content {
@@ -125,9 +125,10 @@ main {
     margin-top: 30px;
 }
 .playlist {
-    flex: 1 1 300px;
     text-align: center;
     margin-right: 20px;
+    width: calc(100% / 6 - 20px);
+
 }
 .playlist__thumbnail {
     position: relative;
