--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,7 @@ main {
     text-align: center;
     margin-right: 20px;
     width: calc(100% / 6 - 20px);
+    min-width: 200px;
 
 }
 .playlist__thumbnail {
@@ -159,3 +160,4 @@ main {
 .playlist__thumbnail:hover i{
     display: block;
 }
+
