--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif; 
 }
 
 header {    
@@ -175,28 +175,63 @@ footer {
     align-items: center;
     height: 100%;
 }
+.playbar img {
+    height: 50px;
+}
 
+/* Barra per indicare il progresso della riproduzione e del volume */
+/*
+Dimensioni generiche delle barre totali
+*/
+.bar {
+    height: 10px;
+    border-radius: 15px;
+ }
+ .bar_bg {         
+    background-color: rgb(90, 90, 90); 
+    position: relative;
+ }
+ /* Barra di riproduzione */
+ .bar_song {  
+     width: 400px;
+ }
+ /* Barra del volume */
+ .bar_vol {
+     width: 200px;
+ }
+ /* Colorazione progress generico delle barre */
+ .bar_progress {
+     width: 33%;
+     background-color: white;
+     position: absolute;
+     left: 0;
+ }
+
+.playbar__content > * {
+    margin: 0 10px;    
+    color: white;
+}
 .playbar__content {
     display: flex;
+    justify-content: center;
     align-items: center;
+    text-align: center;
 }
-.playbar_left {
-    background-color: rgb(173, 255, 47);
+.playbar_side {
+    margin-top: 20px;
 }
-
+.playbar_side:first-child h4,
+.playbar_side:first-child i {
+    color: grey;
+}
 .playbar_central {
-    background-color: salmon;
     flex-grow: 1;
 }
-
-.playbar_right {
-    background-color: seagreen;
+.playbar_central .playbar__content:first-child {
+    font-size: 2em;
+}
+.playbar_central .playbar__content:last-child {
+    font-size: 0.8em;
+    margin-top: 10px;
 }
 
-.playbar img {
-    height: 60px;
-}
-
-.playbar div > * {
-    margin: 0 10px;
-}
