--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,9 @@ footer {
 }.mrg-bot20 {
     margin-bottom: 20px;
 }
+.pdd-10-15{
+    padding: 10px 15px;
+}
 /* Dimensione del menù laterale sinistro */
 .sidebar {
     height: 100%;
@@ -53,9 +56,9 @@ footer {
     /* Il min-height alla sidebar serve in combinazione con l'overflow sul div
     .content, così che quando si restringe in verticale, il contenuto bottom
     della sidebar viene nascosto */
-    min-height:400px;
+    min-height:450px;
     
-    padding: 10px 15px;
+    /* padding: 10px 15px; */
     display: flex;
     flex-direction: column;
 }
@@ -82,6 +85,12 @@ footer {
     di continuare a scorrere verso l'alto sopra al resto della sidebar-top. */
     overflow: hidden;
 }
+/* .sidebar__overflow {
+    display: flex;
+    flex-direction: column;
+    padding dalla sidebar
+    padding: 10px 15px;
+} */
 /* Impostazioni del logo */
 .sidebar-top__logo {
     margin-top: 20px;
